[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/level_elements/LandingPad.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/level_elements/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/level_elements/StartingPad.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/arrows_up.png" type="Texture" id=5]
[ext_resource path="res://src/ui/UI.gd" type="Script" id=6]
[ext_resource path="res://scenes/UI/Counter.tscn" type="PackedScene" id=7]

[node name="Level_Tutorial" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -13.0
margin_right = 1314.0
margin_bottom = 655.0
color = Color( 0, 0, 0, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 522, 474 )

[node name="Ground" parent="." instance=ExtResource( 3 )]

[node name="StartingPad" parent="." instance=ExtResource( 4 )]
position = Vector2( 520, 500 )

[node name="LandingPad2" parent="." instance=ExtResource( 1 )]
position = Vector2( 760, 500 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="BackToLevelSelect" type="Button" parent="UI"]
margin_left = 449.0
margin_top = 259.0
margin_right = 815.0
margin_bottom = 287.0
focus_mode = 0
enabled_focus_mode = 0
text = "Back to level selection"

[node name="Restart" type="Button" parent="UI"]
margin_left = 570.0
margin_top = 202.0
margin_right = 692.0
margin_bottom = 230.0
text = "Restart"

[node name="Counter" parent="UI" instance=ExtResource( 7 )]
startFuel = 1000

[node name="ArrowsUp" type="Sprite" parent="."]
position = Vector2( 307, 279 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[connection signal="emitFuel" from="Player" to="UI/Counter" method="decreaseFuel"]
[connection signal="button_up" from="UI/BackToLevelSelect" to="UI" method="_on_BackToLevelSelect_button_up"]
[connection signal="button_up" from="UI/Restart" to="UI" method="_on_Restart_button_up"]
[connection signal="fuelEmpty" from="UI/Counter" to="Player" method="_onFuelEmpty"]
